# Reinforcement-Light-Rays-Pathtracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
CPU/Source/: camera.cpp  camera.h
Cuda/: CMakeLists.txt
Cuda/.metadata/.plugins/com.nvidia.viper/: dialog_settings.xml
Cuda/.metadata/.plugins/com.nvidia.viper/launch/1/: api_6253.log0
Cuda/.metadata/.plugins/com.nvidia.viper/launch/4/: api_2369.log0  api_8679.log0
Cuda/.metadata/.plugins/com.nvidia.viper/launch/6/: api_2598.log0  api_9038.log0
Cuda/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
Cuda/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Cuda/Source/: camera.cu  camera.cuh  main.cpp  main.cu
Cuda/Source/constants/: image_settings.h  monte_carlo_settings.h  radiance_volumes_settings.h
Cuda/Source/deep_learning/: dq_network.cu  dq_network.cuh  fc_layer.cu  fc_layer.cuh  neural_q_pathtracer.cu  neural_q_pathtracer.cuh
Cuda/Source/lights/: area_light.cpp  area_light.cu  area_light.cuh  area_light.h  area_light_plane.cpp
Cuda/Source/objects/: material.cu  material.cuh  object_importer.cu  shape.cpp  shape.cu  shape.cuh  surface.cpp  surface.cu  surface.cuh  surface.h  triangle.cpp  triangle.cu  triangle.cuh
Cuda/Source/path_tracing/: default_path_tracing.cu  default_path_tracing.cuh  default_path_tracing.h  reinforcement_path_tracing.cu  reinforcement_path_tracing.cuh  voronoi_trace.cu  voronoi_trace.cuh
Cuda/Source/radiance_volumes/: radiance_map.cpp  radiance_map.cu  radiance_map.cuh  radiance_map.h  radiance_tree.cu  radiance_tree.cuh  radiance_volume.cu  radiance_volume.cuh  radiance_volume_comparator.cu  radiance_volume_comparator.cuh
Cuda/Source/rays/: ray.cpp  ray.cu  ray.cuh  ray.h
Cuda/Source/scenes/: cornell_box_scene.cpp  cornell_box_scene.cu  cornell_box_scene.cuh  cornell_box_scene.h  scene.cu  scene.cuh
Cuda/Source/sdl/: sdl_screen.cpp
Cuda/Source/utils/: cuda_helpers.cuh  hemisphere_helpers.cu  hemisphere_helpers.cuh  hemisphere_helpers.h  interpolation.cpp  stack.cu  stack.cuh
Descriptions/Summaries/: weekly-summaries.aux  weekly-summaries.bbl  weekly-summaries.bib  weekly-summaries.bib.bak  weekly-summaries.blg  weekly-summaries.dvi  weekly-summaries.out  weekly-summaries.tex  weekly-summaries.tex.bak  ~$eks-1-4.docx
Descriptions/learning_light_the_reinforced_way/: learning_light_the_reinforced_way.aux  learning_light_the_reinforced_way.out  learning_light_the_reinforced_way.tex
Descriptions/write_up/: dissertation.aux  dissertation.bbl  dissertation.bib  dissertation.bib.bak  dissertation.blg  dissertation.cls  dissertation.cls.bak  dissertation.dvi  dissertation.loa  dissertation.lof  dissertation.lot  dissertation.out  dissertation.synctex(busy)  dissertation.tex  dissertation.tex.bak  dissertation.toc  dissertation.toc.bak  write_up.tex.bak
GPU_Rendering_Engine/: CMakeLists.txt
GPU_Rendering_Engine/.metadata/.plugins/com.nvidia.viper/launch/2/: api_1980.log0
GPU_Rendering_Engine/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
GPU_Rendering_Engine/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
GPU_Rendering_Engine/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
GPU_Rendering_Engine/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
GPU_Rendering_Engine/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.calst-system-product-name_264200/: node.properties
GPU_Rendering_Engine/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.calst-system-product-name_264200/FP.local.files_0/: node.properties
GPU_Rendering_Engine/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.calst-system-product-name_264200/H.local_16/: node.properties
GPU_Rendering_Engine/Source/: camera.cu  camera.cuh  main.cu
GPU_Rendering_Engine/Source/constants/: deep_learning_settings.h  image_settings.h  monte_carlo_settings.h  radiance_volumes_settings.h
GPU_Rendering_Engine/Source/deep_learning/: dq_network.cu  dq_network.cuh  neural_q_pathtracer.cu  neural_q_pathtracer.cuh  nn_rendering_helpers.cu  nn_rendering_helpers.cuh  pre_trained_pathtracer.cu  pre_trained_pathtracer.cuh  q_value_extractor.cu  q_value_extractor.cuh
GPU_Rendering_Engine/Source/lights/: area_light.cu
GPU_Rendering_Engine/Source/objects/: object_importer.cu  object_importer.cuh  shape.cu  shape.cuh  surface.cuh  triangle.cu  triangle.cuh
GPU_Rendering_Engine/Source/path_tracing/: default_path_tracing.cu  default_path_tracing.cuh  reinforcement_path_tracing.cu  reinforcement_path_tracing.cuh  voronoi_trace.cu
GPU_Rendering_Engine/Source/radiance_volumes/: radiance_map.cu  radiance_map.cuh  radiance_tree.cu  radiance_tree.cuh  radiance_volume.cu  radiance_volume.cuh  radiance_volume_comparator.cu
GPU_Rendering_Engine/Source/rays/: ray.cu  ray.cuh
GPU_Rendering_Engine/Source/scenes/: cornell_box_scene.cu  cornell_box_scene.cuh  scene.cu  scene.cuh
GPU_Rendering_Engine/Source/utils/: cuda_helpers.cu  hemisphere_helpers.cu  hemisphere_helpers.cuh  printing.cpp  printing.h  stack.cu  stack.cuh
Graphing/: mape.py  sqd_image.py  sqd_plot.py  training_curve_generator.py
NN_Builders/: dq_network.cu  dq_network.cuh  fc_layer.cu
NN_Q_Learning_Test/: CMakeLists.txt
NN_Q_Value_Trainer/: CMakeLists.txt
NN_Q_Value_Trainer/Source/: main.cu  settings.cuh
Old_CPU_Rendering_Engine/: CMakeLists.txt
Radiance_Map_Data/: 12_12.model  8_8_train_stats.txt  8_8_training_stats.txt  archway_12_12.txt  complex_light_room_12_12.txt  cornell_12_12.model  cornell_no_decay.model  cornell_no_decay.txt  cornell_stats_12_12.txt  deep_q_learning.model  deep_q_learning_12_12.model  deep_q_learning_8_8.model  door_room_12_12.model  door_room_12_12_stats.txt  nn_scene_data.txt  nn_training_stats.txt  radiance_map_model.model  sarsa_archway.txt  sarsa_complex_light_scene.txt  sarsa_cornell.txt  sarsa_door_scene.txt  sarsa_training_stats.txt  stats_3d_pos_training.txt  vertices.txt
Source/: camera.h  main.cpp  radiance_volume.cpp  radiance_volume.h  ray.cpp  ray.h
(+102 files in other folders)
